--- a/verify/terraform/windows-10-1903/Makefile
+++ b/verify/terraform/windows-10-1903/Makefile
@@ -14,7 +14,7 @@ terraform.tfvars:
 apply: terraform.tfvars
 	terraform init
 	terraform plan
-	time (terraform apply -auto-approve && sleep 10 && ansible-playbook -i ansible/hosts ansible/playbook.yml)
+	time (terraform apply -auto-approve && ansible-playbook -i ansible/hosts ansible/playbook.yml)
 
 apply-playbook:
 	ansible-playbook -i ansible/hosts ansible/playbook.yml
