--- a/verify/terraform/windows-10-2016-LTSB/terraform.tfvars.template
+++ b/verify/terraform/windows-10-2016-LTSB/terraform.tfvars.template
@@ -2,7 +2,11 @@ namespace = "example-win10-2016-ltsb"
 windows-username = "clearcode"
 windows-password = "%PASSWORD%"
 windows-language-pack-url = ""
+firefox-policy-template-url = "https://github.com/mozilla/policy-templates/releases/download/v4.12/policy_templates_v4.12.zip"
+thunderbird-policy-template-url = "https://github.com/thundernest/policy-templates/archive/refs/heads/master.zip"
 flash-installer-url = ""
 hookdate-download-url = ""
 debugview-download-url = ""
 old-ie-download-url = ""
+download-user = "browser-verify"
+download-token = ""
