Fix sed option so that Makefile could work fine no matter what strings pwgen would generate

--- a/verify/terraform/skus/current/windows-11-23H2/Makefile
+++ b/verify/terraform/skus/current/windows-11-23H2/Makefile
@@ -9,8 +9,8 @@ SHELL=/bin/bash
 all: apply
 
 terraform.tfvars:
-	cat ../../../modules/terraform.tfvars.template | sed -e "s/%password%/$$(pwgen -s --remove-chars=\'\"$$%{} -y 20 1)/gi" > terraform.tfvars
-
+	cat ../../../modules/terraform.tfvars.template | \
+              sed -e "/^windows-password = \"%PASSWORD%\"/c windows-password = \"$$(pwgen -s --remove-chars=\" -y 20 1)\"" > terraform.tfvars
 apply: terraform.tfvars
 	terraform init
 	terraform plan
