--- a/verify/terraform/skus/windows-11-23H2/Makefile
+++ b/verify/terraform/skus/windows-11-23H2/Makefile
@@ -3,26 +3,12 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 .PHONY: all apply apply-playbook destroy clean
+COMMONDIRS = ../ 
+CURRENT_DIR = $(shell pwd)
 
-SHELL=/bin/bash
+all terraform.tfvars apply apply-playbook destroy clean: $(COMMONDIRS)
 
-all: clean apply
+$(COMMONDIRS): FORCE
+	make -C $@ $(MAKECMDGOALS) DIR_PATH=$(CURRENT_DIR)
 
-terraform.tfvars:
-	cat ../../modules/terraform.tfvars.template | \
-        sed -e "/^windows-password = \"%PASSWORD%\"/c windows-password = \"$$(pwgen -s --remove-chars=\'\"$$%{} -y 20 1)\"" > terraform.tfvars
-
-apply: terraform.tfvars
-	terraform init
-	terraform plan
-	time (terraform apply -auto-approve && ansible-playbook -i ansible/hosts ansible/playbook.yml)
-
-apply-playbook:
-	ansible-playbook -i ansible/hosts ansible/playbook.yml
-
-destroy:
-	terraform destroy -auto-approve
-
-clean:
-	rm -rf .terraform .terraform.lock.hcl password.txt terraform.tfstate terraform.tfstate.backup terraform.tfvars \
-		rdp/add_password.bat rdp/*.rdp
+FORCE:
