--- a/verify/terraform/skus/Makefile
+++ b/verify/terraform/skus/Makefile
@@ -2,7 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-.PHONY: all terraform.tfvars apply apply-playbook destroy clean
+.PHONY: all apply apply-playbook destroy clean
 
 SHELL=/bin/bash
 
