--- a/verify/terraform/skus/windows-11-23H2/Makefile
+++ b/verify/terraform/skus/windows-11-23H2/Makefile
@@ -2,13 +2,5 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-.PHONY: all apply apply-playbook destroy clean
-COMMONDIRS = ../ 
-CURRENT_DIR = $(shell pwd)
-
-all terraform.tfvars apply apply-playbook destroy clean: $(COMMONDIRS)
-
-$(COMMONDIRS): FORCE
-	make -C $@ $(MAKECMDGOALS) DIR_PATH=$(CURRENT_DIR)
-
-FORCE:
+# Include to use Makefile under "skus" directory in common
+include ../Makefile
